--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-	
+	<header>
+
+  </header>
+  <main>
+
+  </main>
+  <footer>
+    
+  </footer>
   <script src="js/scripts.js"></script>
 </body>
 </html>
