--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/style.css?v=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sarabun:wght@500;800&display=swap" rel="stylesheet">
 
 </head>
 
@@ -18,7 +19,7 @@
 
   </main>
   <footer>
-    
+
   </footer>
   <script src="js/scripts.js"></script>
 </body>
