navigation and styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+  <nav>
+    <p>logo</p>
+    <ul>
+      <li>Home</li>
+      <li>About us</li>
+      <li>FAQ</li>
+      <li>Last Year</li>
+      <li>Sponsors</li>
+    </ul>
+  </nav>
 	<header>
 
   </header>
