--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/style.css?v=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sarabun:wght@500;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sarabun:wght@200;500;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -29,7 +31,14 @@
 
   </main>
   <footer>
-
+    <div class="title-box">
+      <a href="https://www.facebook.com/unicsmanchester/k"><img src="static/images/social/facebook-logo.png"></a>
+      <span><h3><u>UniCS</u></h3></span>
+      <a href="https://www.instagram.com/unics_uom/m"><img src="static/images/social/instagram-logo.png"></a>
+    </div>
+    <address>Contact us: <u>hackathons@unicsmcr.com</u></address>
+    <p class="sarabun designer">Designed by: Teona Nikovska & Teet Simson</p>
+    <h6 class="sarabun copywrite">Copyright © UNICS 2020.</h6>
   </footer>
   <script src="js/scripts.js"></script>
 </body>
