+ text size changes and function

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   </main>
   <footer>
     <div class="title-box">
-      <a href="https://www.facebook.com/unicsmanchester/k"><img src="static/images/social/facebook-logo.png"></a>
-      <span><h3><u>UniCS</u></h3></span>
-      <a href="https://www.instagram.com/unics_uom/m"><img src="static/images/social/instagram-logo.png"></a>
+      <a href="https://www.facebook.com/unicsmanchester/"><img class="img-facebook" src="static/images/social/facebook-logo.png"></a>
+      <span><h4><u>UniCS</u></h4></span>
+      <a href="https://www.instagram.com/unics_uom/"><img class="img-instagram" src="static/images/social/instagram-logo.png"></a>
     </div>
     <address>Contact us: <u>hackathons@unicsmcr.com</u></address>
     <p class="sarabun designer">Designed by: Teona Nikovska & Teet Simson</p>
