added links and logo

--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 </head>
 
 <body>
-  <nav>
-    <p>logo</p>
+  <nav class="sarabun">
+    <h1 id="navlogo">< GreatUniHack 2020 /></h1>
     <ul>
-      <li>Home</li>
-      <li>About us</li>
-      <li>FAQ</li>
-      <li>Last Year</li>
-      <li>Sponsors</li>
+      <li><a href="">Home</a></li>
+      <li><a href="">About Us</a></li>
+      <li><a href="">FAQ</a></li>
+      <li><a href="">Last Year</a></li>
+      <li><a href="">Sponsors</a></li>
+      <li><a href="" class="fa fa-facebook"></a></li>
+      <li><a href="" class="fa fa-instagram"></a></li>
     </ul>
   </nav>
 	<header>
-
+    <img id="logo" src="res/guhlogo.png" alt="">
   </header>
   <main>
 
