added html and images

--- a/index.html
+++ b/index.html
@@ -1,47 +1,188 @@
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>GuH 2020</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+    <title>GuH 2020</title>
+    <meta name="description" content="The HTML5 Herald" />
+    <meta name="author" content="SitePoint" />
 
-  <link rel="stylesheet" href="css/style.css?v=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sarabun:wght@200;500;800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css?v=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&family=Sarabun:wght@200;500;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-</head>
-
-<body>
-  <nav class="sarabun">
-    <h1 id="navlogo">< GreatUniHack 2020 /></h1>
-    <ul>
-      <li><a href="">Home</a></li>
-      <li><a href="">About Us</a></li>
-      <li><a href="">FAQ</a></li>
-      <li><a href="">Last Year</a></li>
-      <li><a href="">Sponsors</a></li>
-      <li><a href="" class="fa fa-facebook"></a></li>
-      <li><a href="" class="fa fa-instagram"></a></li>
-    </ul>
-  </nav>
-	<header>
-    <img id="logo" src="res/guhlogo.png" alt="">
-  </header>
-  <main>
-
-  </main>
-  <footer>
-    <div class="title-box">
-      <a href="https://www.facebook.com/unicsmanchester/"><img class="img-facebook" src="static/images/social/facebook-logo.png"></a>
-      <span><h4><u>UniCS</u></h4></span>
-      <a href="https://www.instagram.com/unics_uom/"><img class="img-instagram" src="static/images/social/instagram-logo.png"></a>
-    </div>
-    <address>Contact us: <u>hackathons@unicsmcr.com</u></address>
-    <p class="sarabun designer">Designed by: Teona Nikovska & Teet Simson</p>
-    <h6 class="sarabun copywrite">Copyright © UNICS 2020.</h6>
-  </footer>
-  <script src="js/scripts.js"></script>
-</body>
+  <body>
+    <nav class="sarabun">
+      <h1 id="navlogo">< GreatUniHack 2020 /></h1>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">FAQ</a></li>
+        <li><a href="">Last Year</a></li>
+        <li><a href="">Sponsors</a></li>
+        <li><a href="" class="fa fa-facebook"></a></li>
+        <li><a href="" class="fa fa-instagram"></a></li>
+      </ul>
+    </nav>
+    <header>
+      <div>
+        <div>
+          <h3>28th - 29th November</h3>
+          <h3>@MANCHESTER</h3>
+          <h2>00:00:00:00</h2>
+          <p>Another year, another theme, another coding challenge</p>
+          <div>
+            <a href="">START</a>
+            <a href="">Learn more</a>
+          </div>
+        </div>
+        <img id="logo" src="res/guhlogo.png" alt="" />
+      </div>
+      <div>
+        <p>Scroll down</p>
+      </div>
+    </header>
+    <main>
+      <!-- ABOUT -->
+      <section id="about">
+        <article>
+          <h2>About us!</h2>
+          <p>
+            //We are GreatUniHack, an annual 24-hour student-oriented hackathon
+            organised by the University of Manchester tech society, UniCS. Since
+            2014, we have brought together students from 88 universities across
+            Europe to work and develop innovative ideas in a competitive
+            environment. This year's edition aims to introduce a new generation
+            of developers with great potential for improving the technology
+            industry and community//
+          </p>
+        </article>
+        <aside>
+          <img src="./res/about/team.png" alt="" />
+        </aside>
+      </section>
+      <!-- FAQ -->
+      <section id="faq">
+        <h2>Frequently Asked Questions.</h2>
+        <article>
+          <div>
+            <h4>What is a HACKATHON?</h4>
+            <p>
+              Hackathons are awesome events full of creativity, tech and
+              passionate students collaborating. We work in teams to create
+              apps, games, robots… literally anything you want to build & learn
+              about!
+            </p>
+          </div>
+          <div>
+            <h4>How much does it cost?</h4>
+            <p>
+              GreatUniHack is free for all accepted hackers. We will provide you
+              WiFi, meals, swag, workshops and…..fun!
+            </p>
+          </div>
+          <div>
+            <h4>What if I don’t have a team?</h4>
+            <p>
+              No need to worry! Part of the fun of a hackathon is meeting new people. We will have time at the beginning of the event for everyone to meet and form teams.
+            </p>
+          </div>
+          <div>
+            <h4>What should I bring?</h4>
+            <p>All attendees must bring a valid ID for admission. Other common checklist items include: laptops, chargers, sleeping bags and toiletries.</p>
+          </div>
+          <div>
+            <h4>Who can apply?</h4>
+            <p>We accept students who are over 18 and are currently studying or have graduated less than 1 year ago. You can also join us as a mentor! Contact us for more info.</p>
+          </div>
+          <div>
+            <h4>Do you have a code of conduct?</h4>
+            <p>Yes! Smile, be nice and have fun, but all the other details can be found in our <a href="" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
+          </div>
+          <div>
+            <h4>I don’t know how to code. Can I still participate?</h4>
+            <p>Hackathons are for beginners. There is an amazing suit of industry experts and mentors that are happy to assist you!</p>
+          </div>
+          <div>
+            <h4>What can I expect from GreatUniHack?</h4>
+            <p>An entire weekend of great company, good food and plenty of swag! We’ll also have hardware and tons of mentors.</p>
+          </div>
+          <div>
+            <h4>Who owns my IP rights, code and idea?</h4>
+            <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
+          </div>
+        </article>
+      </section>
+      <!-- LAST YEAR -->
+      <section>
+        <h2>Last Year was < awesome /></h2>
+        <p>When we didn't know what Covid-19 is!</p>
+        <article>
+            <img src="./res/last year/1.png" alt="">
+            <img src="./res/last year/2.png" alt="">
+            <img src="./res/last year/3.png" alt="">
+            <img src="./res/last year/4.png" alt="">
+            <img src="./res/last year/5.png" alt="">
+            <img src="./res/last year/6.png" alt="">
+            <img src="./res/last year/7.png" alt="">
+            <img src="./res/last year/8.png" alt="">
+        </article>
+        <a href="http://" target="_blank" rel="noopener noreferrer">See more!</a>
+      </section>
+      <!-- SPONSORS -->
+      <section>
+        <h2>Sponsors</h2>
+        <p>Want to know more about our sponsors?</p>
+        <article>
+          <div>
+            <img src="./res/sponsors/silver.png" alt="">
+            <p>Silver Sponsor</p>
+            <img src="./res/sponsors/bloomberg.png" alt="">
+          </div>
+          <div>
+            <img src="./res/sponsors/gold.png" alt="">
+            <p>Gold Sponsor</p>
+            <img src="./res/sponsors/bet365.png" alt="">
+          </div>
+          <div>
+            <img src="./res/sponsors/bronze.png" alt="">
+            <p>Bronze Sponsor</p>
+            <img src="./res/sponsors/fuzzylabs.png" alt="">
+          </div>
+        </article>
+      </section>
+    </main>
+    <!-- FOOTER -->
+    <footer>
+      <div class="title-box">
+        <a href="https://www.facebook.com/unicsmanchester/"
+          ><img
+            class="img-facebook"
+            src="static/images/social/facebook-logo.png"
+        /></a>
+        <span
+          ><h4><u>UniCS</u></h4></span
+        >
+        <a href="https://www.instagram.com/unics_uom/"
+          ><img
+            class="img-instagram"
+            src="static/images/social/instagram-logo.png"
+        /></a>
+      </div>
+      <address>Contact us: <u>hackathons@unicsmcr.com</u></address>
+      <p class="sarabun designer">Designed by: Teona Nikovska & Teet Simson</p>
+      <h6 class="sarabun copywrite">Copyright © UNICS 2020.</h6>
+    </footer>
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
