--- a/index.html
+++ b/index.html
@@ -140,24 +140,26 @@
         <a href="http://" target="_blank" rel="noopener noreferrer">See more!</a>
       </section>
       <!-- SPONSORS -->
-      <section>
-        <h2>Sponsors</h2>
-        <p>Want to know more about our sponsors?</p>
-        <article>
+      <section id="sponsors">
+        <div>
+          <h2 class="sarabun800">Sponsors</h2>
+          <p>Want to know more about our sponsors?</p>
+        </div>
+        <article id="medals">
           <div>
-            <img src="./res/sponsors/silver.png" alt="">
+            <img class="medal" src="./res/sponsors/silver.png" alt="">
             <p>Silver Sponsor</p>
-            <img src="./res/sponsors/bloomberg.png" alt="">
+            <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
           </div>
           <div>
-            <img src="./res/sponsors/gold.png" alt="">
+            <img class="medal" src="./res/sponsors/gold.png" alt="">
             <p>Gold Sponsor</p>
-            <img src="./res/sponsors/bet365.png" alt="">
+            <img class="sponsor" src="./res/sponsors/bet365.png" alt="">
           </div>
           <div>
-            <img src="./res/sponsors/bronze.png" alt="">
+            <img class="medal" src="./res/sponsors/bronze.png" alt="">
             <p>Bronze Sponsor</p>
-            <img src="./res/sponsors/fuzzylabs.png" alt="">
+            <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
           </div>
         </article>
       </section>
