+ Gallery section and background

--- a/index.html
+++ b/index.html
@@ -124,20 +124,26 @@
         </article>
       </section>
       <!-- LAST YEAR -->
-      <section>
-        <h2>Last Year was < awesome /></h2>
-        <p>When we didn't know what Covid-19 is!</p>
+      <section id="lastYear">
+        <h2 id="title">Last Year was <<span id="awesome"> awesome </span>/></h2>
+        <p class="sarabun500">When we didn't know what Covid-19 was!</p>
         <article>
-            <img src="./res/last year/1.png" alt="">
-            <img src="./res/last year/2.png" alt="">
-            <img src="./res/last year/3.png" alt="">
-            <img src="./res/last year/4.png" alt="">
-            <img src="./res/last year/5.png" alt="">
-            <img src="./res/last year/6.png" alt="">
-            <img src="./res/last year/7.png" alt="">
-            <img src="./res/last year/8.png" alt="">
+            <div>
+              <img src="./res/lastYear/1.png" alt="">
+              <img src="./res/lastYear/2.png" alt="">
+              <img src="./res/lastYear/3.png" alt="">
+              <img src="./res/lastYear/4.png" alt="">
+            </div>
+            <div>
+              <img src="./res/lastYear/5.png" alt="">
+              <img src="./res/lastYear/6.png" alt="">
+              <img src="./res/lastYear/7.png" alt="">
+              <img src="./res/lastYear/8.png" alt="">
+            </div>
         </article>
-        <a href="http://" target="_blank" rel="noopener noreferrer">See more!</a>
+        <div>
+          <button>See more!</button>
+        </div>
       </section>
       <!-- SPONSORS -->
       <section id="sponsors">
