--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css?v=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&family=Sarabun:wght@200;500;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&family=Sarabun:wght@200;500;800&display=swap"
       rel="stylesheet"
     />
     <link
@@ -58,13 +58,13 @@
         <article>
           <h2>About us!</h2>
           <p>
-            //We are GreatUniHack, an annual 24-hour student-oriented hackathon
+            We are GreatUniHack, an annual 24-hour student-oriented hackathon
             organised by the University of Manchester tech society, UniCS. Since
             2014, we have brought together students from 88 universities across
             Europe to work and develop innovative ideas in a competitive
             environment. This year's edition aims to introduce a new generation
             of developers with great potential for improving the technology
-            industry and community//
+            industry and community
           </p>
         </article>
         <aside>
@@ -75,51 +75,75 @@
       <section id="faq">
         <h2>Frequently Asked Questions.</h2>
         <article>
-          <div>
-            <h4>What is a HACKATHON?</h4>
-            <p>
-              Hackathons are awesome events full of creativity, tech and
-              passionate students collaborating. We work in teams to create
-              apps, games, robots… literally anything you want to build & learn
-              about!
-            </p>
+          <div id="row">
+            <div id="card">
+              <img src="./res/faq/hacker.png" alt="">
+              <h4>What is a HACKATHON?</h4>
+              <p>
+                Hackathons are awesome events full of creativity, tech and
+                passionate students collaborating. We work in teams to create
+                apps, games, robots… literally anything you want to build & learn
+                about!
+              </p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
+            <div id="card">
+              <img src="./res/faq/money-bag.png" alt="">
+              <h4>How much does it cost?</h4>
+              <p>
+                GreatUniHack is <b>free</b> for all accepted hackers. We will provide you
+                WiFi, meals, swag, workshops and…..<b>fun!</b>
+              </p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
+            <div id="card">
+              <img src="./res/faq/group.png" alt="">
+              <h4>What if I don’t have a team?</h4>
+              <p>
+                No need to worry! Part of the fun of a hackathon is meeting new people. We will have time at the beginning of the event for everyone to meet and form teams.
+              </p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
           </div>
-          <div>
-            <h4>How much does it cost?</h4>
-            <p>
-              GreatUniHack is free for all accepted hackers. We will provide you
-              WiFi, meals, swag, workshops and…..fun!
-            </p>
+          <div id="row">
+            <div id="card">
+              <img src="./res/faq/check-mark.png" alt="">
+              <h4>What should I bring?</h4>
+              <p>All attendees must bring a valid ID for admission. Other common checklist items include: laptops, chargers, sleeping bags and toiletries.</p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
+            <div id="card">
+              <img src="./res/faq/contract.png" alt="">
+              <h4>Who can apply?</h4>
+              <p>We accept students who are over 18 and are currently studying or have graduated less than 1 year ago. You can also join us as a mentor! Contact us for more info.</p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
+            <div id="card">
+              <img src="./res/faq/legal-paper.png" alt="">
+              <h4>Do you have a code of conduct?</h4>
+              <p>Yes! <br> Smile, be nice and have fun, but all the other details can be found in our <a href="" id="conduct" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
           </div>
-          <div>
-            <h4>What if I don’t have a team?</h4>
-            <p>
-              No need to worry! Part of the fun of a hackathon is meeting new people. We will have time at the beginning of the event for everyone to meet and form teams.
-            </p>
-          </div>
-          <div>
-            <h4>What should I bring?</h4>
-            <p>All attendees must bring a valid ID for admission. Other common checklist items include: laptops, chargers, sleeping bags and toiletries.</p>
-          </div>
-          <div>
-            <h4>Who can apply?</h4>
-            <p>We accept students who are over 18 and are currently studying or have graduated less than 1 year ago. You can also join us as a mentor! Contact us for more info.</p>
-          </div>
-          <div>
-            <h4>Do you have a code of conduct?</h4>
-            <p>Yes! Smile, be nice and have fun, but all the other details can be found in our <a href="" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
-          </div>
-          <div>
-            <h4>I don’t know how to code. Can I still participate?</h4>
-            <p>Hackathons are for beginners. There is an amazing suit of industry experts and mentors that are happy to assist you!</p>
-          </div>
-          <div>
-            <h4>What can I expect from GreatUniHack?</h4>
-            <p>An entire weekend of great company, good food and plenty of swag! We’ll also have hardware and tons of mentors.</p>
-          </div>
-          <div>
-            <h4>Who owns my IP rights, code and idea?</h4>
-            <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
+          <div id="row">
+            <div id="card">
+              <img src="./res/faq/coding.png" alt="">
+              <h4>I don’t know how to code. Can I still participate?</h4>
+              <p>Hackathons are for beginners. There is an amazing suit of industry experts and mentors that are happy to assist you!</p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
+            <div id="card">
+              <img src="./res/faq/followers.png" alt="">
+              <h4>What can I expect from GreatUniHack?</h4>
+              <p>An entire weekend of great company, good food and plenty of swag! We’ll also have hardware and tons of mentors.</p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
+            <div id="card">
+              <img src="./res/faq/copyright.png" alt="">
+              <h4>Who owns my IP rights, code and idea?</h4>
+              <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
+              <img id="line" src="./res/faq/Line.png" alt="">
+            </div>
           </div>
         </article>
       </section>
