--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 apps, games, robots… literally anything you want to build & learn
                 about!
               </p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
             <div id="card">
               <img src="./res/faq/money-bag.png" alt="">
@@ -94,7 +96,9 @@
                 GreatUniHack is <b>free</b> for all accepted hackers. We will provide you
                 WiFi, meals, swag, workshops and…..<b>fun!</b>
               </p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
             <div id="card">
               <img src="./res/faq/group.png" alt="">
@@ -102,7 +106,9 @@
               <p>
                 No need to worry! Part of the fun of a hackathon is meeting new people. We will have time at the beginning of the event for everyone to meet and form teams.
               </p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
           </div>
           <div id="row">
@@ -110,19 +116,25 @@
               <img src="./res/faq/check-mark.png" alt="">
               <h4>What should I bring?</h4>
               <p>All attendees must bring a valid ID for admission. Other common checklist items include: laptops, chargers, sleeping bags and toiletries.</p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
             <div id="card">
               <img src="./res/faq/contract.png" alt="">
               <h4>Who can apply?</h4>
               <p>We accept students who are over 18 and are currently studying or have graduated less than 1 year ago. You can also join us as a mentor! Contact us for more info.</p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
             <div id="card">
               <img src="./res/faq/legal-paper.png" alt="">
               <h4>Do you have a code of conduct?</h4>
               <p>Yes! <br> Smile, be nice and have fun, but all the other details can be found in our <a href="" id="conduct" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
           </div>
           <div id="row">
@@ -130,19 +142,25 @@
               <img src="./res/faq/coding.png" alt="">
               <h4>I don’t know how to code. Can I still participate?</h4>
               <p>Hackathons are for beginners. There is an amazing suit of industry experts and mentors that are happy to assist you!</p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
             <div id="card">
               <img src="./res/faq/followers.png" alt="">
               <h4>What can I expect from GreatUniHack?</h4>
               <p>An entire weekend of great company, good food and plenty of swag! We’ll also have hardware and tons of mentors.</p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
             <div id="card">
               <img src="./res/faq/copyright.png" alt="">
               <h4>Who owns my IP rights, code and idea?</h4>
               <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
-              <img id="line" src="./res/faq/Line.png" alt="">
+              <div id="bottom-anchor">
+                <img id="line" src="./res/faq/Line.png" alt="">
+              </div>
             </div>
           </div>
         </article>
@@ -166,7 +184,7 @@
             </div>
         </article>
         <div>
-          <button>See more!</button>
+            <button onclick="window.location.href='https://unicsmcr.com/gallery'">See more!</button>
         </div>
       </section>
       <!-- SPONSORS -->
