--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <!-- FAQ -->
       <section id="faq">
         <h2>Frequently Asked Questions.</h2>
+        <img id="titleLine" src="./res/faq/Line.png" alt="">
         <article>
           <div id="row">
             <div id="card">
@@ -171,7 +172,7 @@
         <p class="sarabun500">When we didn't know what Covid-19 was!</p>
         <article>
             <div>
-              <img src="./res/lastYear/1.png" alt="">
+              <img src="./res/lastYear/1.jpg" alt="">
               <img src="./res/lastYear/2.png" alt="">
               <img src="./res/lastYear/3.png" alt="">
               <img src="./res/lastYear/4.png" alt="">
