fix: use HTML entities for < and >

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>GuH 2020</title>
-    <meta name="description" content="The HTML5 Herald" />
-    <meta name="author" content="SitePoint" />
+    <title>GUH 2020</title>
 
     <link rel="stylesheet" href="css/style.css?v=1.0" />
     <link
@@ -23,7 +21,7 @@
 
   <body>
     <nav class="sarabun">
-      <h1 id="navlogo">< GreatUniHack 2020 /></h1>
+      <h1 id="navlogo">&lt; GreatUniHack 2020 /&gt;</h1>
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
@@ -168,7 +166,7 @@
       </section>
       <!-- LAST YEAR -->
       <section id="lastYear">
-        <h2 id="title">Last Year was <<span id="awesome"> awesome </span>/></h2>
+        <h2 id="title">Last Year was &lt;<span id="awesome"> awesome </span>/&gt;</h2>
         <p class="sarabun500">When we didn't know what Covid-19 was!</p>
         <article>
             <div>
