refactor: start refactoring header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <nav class="sarabun">
-      <h1 id="navlogo">&lt; GreatUniHack 2020 /&gt;</h1>
+      <span id="navlogo">&lt; GreatUniHack 2020 /&gt;</span>
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About Us</a></li>
