feat: update header

--- a/index.html
+++ b/index.html
@@ -33,21 +33,17 @@
       </ul>
     </nav>
     <header>
-      <div>
+      <div class="container sarabun">
         <div>
-          <h3>28th - 29th November</h3>
-          <h3>@MANCHESTER</h3>
-          <h2>00:00:00:00</h2>
-          <p>Another year, another theme, another coding challenge</p>
-          <div>
-            <a href="">START</a>
-            <a href="">Learn more</a>
+          <h2 class="event-date">28th - 29th November<br />@MANCHESTER</h2>
+          <h1 class="event-time">00:00:00:00</h1>
+          <p class="event-description">Another year, another theme, another coding challenge</p>
+          <div class="buttons">
+            <a href="" class="start-button">START</a>
+            <a href="" class="learn-more-button">Learn more</a>
           </div>
         </div>
         <img id="logo" src="res/guhlogo.png" alt="" />
-      </div>
-      <div>
-        <p>Scroll down</p>
       </div>
     </header>
     <main>
