--- a/index.html
+++ b/index.html
@@ -50,21 +50,28 @@
     <main>
       <!-- ABOUT -->
       <section id="about">
-        <article>
-          <h2>About us!</h2>
-          <p>
-            We are GreatUniHack, an annual 24-hour student-oriented hackathon
-            organised by the University of Manchester tech society, UniCS. Since
-            2014, we have brought together students from 88 universities across
-            Europe to work and develop innovative ideas in a competitive
-            environment. This year's edition aims to introduce a new generation
-            of developers with great potential for improving the technology
-            industry and community
-          </p>
-        </article>
-        <aside>
-          <img src="./res/about/team.png" alt="" />
-        </aside>
+        <div class="container roboto">
+          <article>
+            <h1>About us!</h1>
+            <p>
+              We are GreatUniHack, an annual 24-hour student-oriented hackathon
+              organised by the University of Manchester tech society, UniCS.
+            </p>
+            <p>
+              Since 2014, we have brought together students from 88 universities across
+              Europe to work and develop innovative ideas in a competitive
+              environment.
+            </p>
+            <p>
+              This year's edition aims to introduce a new generation
+              of developers with great potential for improving the technology
+              industry and community.
+            </p>
+          </article>
+          <aside>
+            <img src="./res/about/team.png" alt="" />
+          </aside>
+        </div>
       </section>
       <!-- FAQ -->
       <section id="faq">
