fix: semantically correct HTML for FAQ cards

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
           <h1>Frequently Asked Questions</h1>
           <article>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/hacker.png" alt="">
                 <h4>What is a HACKATHON?</h4>
                 <p>
@@ -88,7 +88,7 @@
                   about!
                 </p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/money-bag.png" alt="">
                 <h4>How much does it cost?</h4>
                 <p>
@@ -96,39 +96,39 @@
                   WiFi, meals, swag, workshops and…..<b>fun!</b>
                 </p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/group.png" alt="">
                 <h4>What if I don’t have a team?</h4>
                 <p>
                   No need to worry! Part of the fun of a hackathon is meeting new people. We will have time at the beginning of the event for everyone to meet and form teams.
                 </p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/check-mark.png" alt="">
                 <h4>What should I bring?</h4>
                 <p>All attendees must bring a valid ID for admission. Other common checklist items include: laptops, chargers, sleeping bags and toiletries.</p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/contract.png" alt="">
                 <h4>Who can apply?</h4>
                 <p>We accept students who are over 18 and are currently studying or have graduated less than 1 year ago. You can also join us as a mentor! Contact us for more info.</p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/legal-paper.png" alt="">
                 <h4>Do you have a code of conduct?</h4>
                 <p>Yes! <br> Smile, be nice and have fun, but all the other details can be found in our <a href="" id="conduct" target="_blank" rel="noopener noreferrer">code of conduct</a>.</p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/coding.png" alt="">
                 <h4>I don’t know how to code. Can I still participate?</h4>
                 <p>Hackathons are for beginners. There is an amazing suit of industry experts and mentors that are happy to assist you!</p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/followers.png" alt="">
                 <h4>What can I expect from GreatUniHack?</h4>
                 <p>An entire weekend of great company, good food and plenty of swag! We’ll also have hardware and tons of mentors.</p>
               </div>
-              <div id="card">
+              <div class="card">
                 <img src="./res/faq/copyright.png" alt="">
                 <h4>Who owns my IP rights, code and idea?</h4>
                 <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
