feat: last year sponsors

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h1 class="event-time">00:00:00:00</h1>
           <p class="event-description">Another year, another theme, another coding challenge</p>
           <div class="buttons">
-            <a href="" class="start-button">START</a>
+            <a href="" class="highlight-button">START</a>
             <a href="" class="learn-more-button">Learn more</a>
           </div>
         </div>
@@ -139,24 +139,22 @@
       </section>
       <!-- LAST YEAR -->
       <section id="lastYear">
-        <h2 id="title">Last Year was &lt;<span id="awesome"> awesome </span>/&gt;</h2>
-        <p class="sarabun500">When we didn't know what Covid-19 was!</p>
-        <article>
-            <div>
-              <img src="./res/lastYear/1.jpg" alt="">
-              <img src="./res/lastYear/2.png" alt="">
-              <img src="./res/lastYear/3.png" alt="">
-              <img src="./res/lastYear/4.png" alt="">
-            </div>
-            <div>
-              <img src="./res/lastYear/5.png" alt="">
-              <img src="./res/lastYear/6.png" alt="">
-              <img src="./res/lastYear/7.png" alt="">
-              <img src="./res/lastYear/8.png" alt="">
-            </div>
-        </article>
-        <div>
-            <button onclick="window.location.href='https://unicsmcr.com/gallery'">See more!</button>
+        <div class="container">
+          <h1>Last Year was &lt;<span id="awesome">awesome</span>/&gt;</h1>
+          <p class="subtitle">When we didn't know what Covid-19 was!</p>
+          <article>
+                <img src="./res/lastYear/1.png" alt="">
+                <img src="./res/lastYear/2.png" alt="">
+                <img src="./res/lastYear/3.png" alt="">
+                <img src="./res/lastYear/4.png" alt="">
+                <img src="./res/lastYear/5.png" alt="">
+                <img src="./res/lastYear/6.png" alt="">
+                <img src="./res/lastYear/7.png" alt="">
+                <img src="./res/lastYear/8.png" alt="">
+          </article>
+          <div class="centered">
+            <a href="#" class="highlight-button">See more!</a>
+          </div>
         </div>
       </section>
       <!-- SPONSORS -->
