--- a/index.html
+++ b/index.html
@@ -159,27 +159,33 @@
       </section>
       <!-- SPONSORS -->
       <section id="sponsors">
-        <div>
-          <h2 class="sarabun800">Sponsors</h2>
-          <p>Want to know more about our sponsors?</p>
+        <div class="container">
+          <h1>Sponsors</h2>
+          <p class="subtitle">Want to know more about our sponsors?</p>
+          <article id="medals">
+            <div>
+              <div>
+                <img class="medal" src="./res/sponsors/silver.png" alt="">
+                <p>Silver Sponsor</p>
+              </div>
+              <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
+            </div>
+            <div>
+              <div>
+                <img class="medal" src="./res/sponsors/gold.png" alt="">
+                <p>Gold Sponsor</p>
+              </div>
+              <img class="sponsor" src="./res/sponsors/bet365.png" alt="">
+            </div>
+            <div>
+              <div>
+                <img class="medal" src="./res/sponsors/bronze.png" alt="">
+                <p>Bronze Sponsor</p>
+              </div>
+              <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
+            </div>
+          </article>
         </div>
-        <article id="medals">
-          <div>
-            <img class="medal" src="./res/sponsors/silver.png" alt="">
-            <p>Silver Sponsor</p>
-            <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
-          </div>
-          <div>
-            <img class="medal" src="./res/sponsors/gold.png" alt="">
-            <p>Gold Sponsor</p>
-            <img class="sponsor" src="./res/sponsors/bet365.png" alt="">
-          </div>
-          <div>
-            <img class="medal" src="./res/sponsors/bronze.png" alt="">
-            <p>Bronze Sponsor</p>
-            <img class="sponsor" src="./res/sponsors/fuzzylabs.png" alt="">
-          </div>
-        </article>
       </section>
     </main>
     <!-- FOOTER -->
