--- a/index.html
+++ b/index.html
@@ -189,25 +189,16 @@
       </section>
     </main>
     <!-- FOOTER -->
-    <footer>
-      <div class="title-box">
-        <a href="https://www.facebook.com/unicsmanchester/"
-          ><img
-            class="img-facebook"
-            src="static/images/social/facebook-logo.png"
-        /></a>
-        <span
-          ><h4><u>UniCS</u></h4></span
-        >
-        <a href="https://www.instagram.com/unics_uom/"
-          ><img
-            class="img-instagram"
-            src="static/images/social/instagram-logo.png"
-        /></a>
+    <footer class="sarabun">
+      <div class="container">
+        <ul class="social-media">
+          <li><a href="https://www.facebook.com/unicsmanchester/" class="fa fa-facebook"></a></li>
+          <li><a href="https://www.instagram.com/unics_uom/" class="fa fa-instagram"></a></li>
+        </ul>
+        <p>Contact us: <a href="mailto:hackathons@unicsmcr.com" id="email">hackathons@unicsmcr.com</a></p>
+        <p class="sarabun">Designed by: Teona Nikovska & Teet Simson</p>
+        <p class="sarabun">Copyright © UniCS 2020.</p>
       </div>
-      <address>Contact us: <u>hackathons@unicsmcr.com</u></address>
-      <p class="sarabun designer">Designed by: Teona Nikovska & Teet Simson</p>
-      <h6 class="sarabun copywrite">Copyright © UNICS 2020.</h6>
     </footer>
     <script src="js/scripts.js"></script>
   </body>
