--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <title>GUH 2020</title>
+    <title>GreatUniHack 2020</title>
 
     <link rel="stylesheet" href="css/style.css?v=1.0" />
     <link
@@ -37,7 +37,7 @@
       <div class="container sarabun">
         <div>
           <h2 class="event-date">28th - 29th November<br />@MANCHESTER</h2>
-          <h1 class="event-time">00:00:00:00</h1>
+          <h1 id="event-time" class="event-time">00:00:00:00</h1>
           <p class="event-description">Another year, another theme, another coding challenge</p>
           <div class="buttons">
             <a href="" class="highlight-button">START</a>
@@ -200,6 +200,6 @@
         <p class="sarabun">Copyright © UniCS 2020.</p>
       </div>
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="js/countdown.js"></script>
   </body>
 </html>
