--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           <li><a href="https://www.instagram.com/unics_uom/" class="fa fa-instagram"></a></li>
         </ul>
         <p>Contact us: <a href="mailto:hackathons@unicsmcr.com" id="email">hackathons@unicsmcr.com</a></p>
-        <p class="sarabun">Designed by: Teona Nikovska & Teet Simson</p>
+        <p class="sarabun">Designed by Teona Nikovska & Teet Simson</p>
         <p class="sarabun">Copyright © UniCS 2020.</p>
       </div>
     </footer>
