feat: more mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <header>
-      <div class="container sarabun">
+      <div class="container sarabun col2">
         <div>
           <h2 class="event-date">28th - 29th November<br />@MANCHESTER</h2>
           <h1 id="event-time" class="event-time">00:00:00:00</h1>
@@ -50,7 +50,7 @@
     <main class="roboto">
       <!-- ABOUT -->
       <section id="about">
-        <div class="container">
+        <div class="container col2">
           <article>
             <h1>About us!</h1>
             <p>
@@ -133,8 +133,8 @@
                 <h4>Who owns my IP rights, code and idea?</h4>
                 <p>You own all the rights to your intellectual property. We won’t claim  any right over anything made during this event.</p>
               </div>
+            </article>
             </div>
-          </article>
         </div>
       </section>
       <!-- LAST YEAR -->
