feat: mobile responsive

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   </head>
 
   <body>
+    <div id="mobilenav">
+      <i class="fa fa-bars" onclick="toggleMenu()"></i>
+    </div>
     <nav class="sarabun">
       <span id="navlogo">&lt; GreatUniHack 2020 /&gt;</span>
       <ul>
