--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <nav class="sarabun">
       <span id="navlogo">&lt; GreatUniHack 2020 /&gt;</span>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Us</a></li>
-        <li><a href="">FAQ</a></li>
-        <li><a href="">Last Year</a></li>
-        <li><a href="">Sponsors</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#lastYear">Last Year</a></li>
+        <li><a href="#sponsors">Sponsors</a></li>
         <li><a href="" class="fa fa-facebook"></a></li>
         <li><a href="" class="fa fa-instagram"></a></li>
       </ul>
@@ -53,6 +53,7 @@
     <main class="roboto">
       <!-- ABOUT -->
       <section id="about">
+        <a href="#about"></a>
         <div class="container col2">
           <article>
             <h1>About us!</h1>
@@ -78,6 +79,7 @@
       </section>
       <!-- FAQ -->
       <section id="faq">
+        <a href="#faq"></a>
         <div class="container">
           <h1>Frequently Asked Questions</h1>
           <article>
@@ -142,6 +144,7 @@
       </section>
       <!-- LAST YEAR -->
       <section id="lastYear">
+        <a href="#lastYear"></a>
         <div class="container">
           <h1>Last Year was &lt;<span id="awesome">awesome</span>/&gt;</h1>
           <p class="subtitle">When we didn't know what Covid-19 was!</p>
@@ -162,6 +165,7 @@
       </section>
       <!-- SPONSORS -->
       <section id="sponsors">
+        <a href="#sponsors"></a>
         <div class="container">
           <h1>Sponsors</h2>
           <p class="subtitle">Want to know more about our sponsors?</p>
@@ -193,6 +197,7 @@
     </main>
     <!-- FOOTER -->
     <footer class="sarabun">
+      <a href="#contact"></a>
       <div class="container">
         <ul class="social-media">
           <li><a href="https://www.facebook.com/unicsmanchester/" class="fa fa-facebook"></a></li>
