feat: some changes

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <li><a href="#faq">FAQ</a></li>
         <li><a href="#lastYear">Last Year</a></li>
         <li><a href="#sponsors">Sponsors</a></li>
-        <li><a href="" class="fa fa-facebook"></a></li>
-        <li><a href="" class="fa fa-instagram"></a></li>
+        <li><a href="https://www.facebook.com/unicsmanchester/" class="fa fa-facebook" target="_blank" rel="noreferrer"></a></li>
+        <li><a href="https://www.instagram.com/unics_uom/" class="fa fa-instagram" target="_blank" rel="noreferrer"></a></li>
       </ul>
     </nav>
     <header>
