fix: small fixes

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <h1 id="event-time" class="event-time">00:00:00:00</h1>
           <p class="event-description">Another year, another theme, another coding challenge</p>
           <div class="buttons">
-            <a href="" class="highlight-button">START</a>
-            <a href="" class="learn-more-button">Learn more</a>
+            <a href="https://apply.greatunihack.com" class="highlight-button">Apply</a>
+            <a href="#about" class="learn-more-button">Learn more</a>
           </div>
         </div>
         <img id="logo" src="res/guhlogo.png" alt="" />
@@ -159,7 +159,7 @@
                 <img src="./res/lastYear/8.png" alt="">
           </article>
           <div class="centered">
-            <a href="#" class="highlight-button">See more!</a>
+            <a href="https://unicsmcr.com/gallery" class="highlight-button" target="_blank" rel="noreferrer">See more!</a>
           </div>
         </div>
       </section>
@@ -172,17 +172,17 @@
           <article id="medals">
             <div>
               <div>
-                <img class="medal" src="./res/sponsors/silver.png" alt="">
-                <p>Silver Sponsor</p>
-              </div>
-              <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
-            </div>
-            <div>
-              <div>
                 <img class="medal" src="./res/sponsors/gold.png" alt="">
                 <p>Gold Sponsor</p>
               </div>
               <img class="sponsor" src="./res/sponsors/bet365.png" alt="">
+            </div>
+            <div>
+              <div>
+                <img class="medal" src="./res/sponsors/silver.png" alt="">
+                <p>Silver Sponsor</p>
+              </div>
+              <img class="sponsor" src="./res/sponsors/bloomberg.png" alt="">
             </div>
             <div>
               <div>
