--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </p>
           </article>
           <aside>
-            <img src="./res/about/team.png" alt="" />
+            <img id="teamimg" src="./res/about/team.png" alt="" />
           </aside>
         </div>
       </section>
